--- a/index.html
+++ b/index.html
@@ -333,4 +333,5 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-wrap">
           
