--- a/index.html
+++ b/index.html
@@ -368,3 +368,5 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-wrap">
