--- a/index.html
+++ b/index.html
@@ -385,3 +385,5 @@
       </div>
     </section><!-- End Portfolio Section -->
 
+    <!-- ======= Services Section ======= -->
+    <section id="services" class="services">
