--- a/index.html
+++ b/index.html
@@ -404,4 +404,4 @@
                 </svg>
                 <i class="bx bxl-dribbble"></i>
               </div>
-z
+              <h4><a href="">Mobile Apps</a></h4>
