--- a/index.html
+++ b/index.html
@@ -405,3 +405,4 @@
                 <i class="bx bxl-dribbble"></i>
               </div>
               <h4><a href="">Mobile Apps</a></h4>
+              <p>Apps Development at Good Price</p>
