--- a/index.html
+++ b/index.html
@@ -406,3 +406,4 @@
               </div>
               <h4><a href="">Mobile Apps</a></h4>
               <p>Apps Development at Good Price</p>
+            </div>
