--- a/index.html
+++ b/index.html
@@ -427,3 +427,4 @@
                 </svg>
                 <i class="bx bxl-github"></i>
               </div>
+              <h4><a href="">Rwema -Github </a></h4>
