--- a/index.html
+++ b/index.html
@@ -465,3 +465,4 @@
                 </svg>
                 <i class="bx bx-slideshow"></i>
               </div>
+              <h4><a href="">Video Editing</a></h4>
