--- a/index.html
+++ b/index.html
@@ -468,3 +468,4 @@
               <h4><a href="">Video Editing</a></h4>
               <p>With DaVinci Reserve & Blender</p>
             </div>
+          </div>
