--- a/index.html
+++ b/index.html
@@ -476,3 +476,4 @@
     </section><!-- End Services Section -->
 
     <!-- ======= Testimonials Section ======= -->
+    <section id="testimonials" class="testimonials section-bg">
