--- a/index.html
+++ b/index.html
@@ -486,4 +486,5 @@
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
           <div class="swiper-wrapper">
 
-z
+            <div class="swiper-slide">
+              <div class="testimonial-item">
