--- a/index.html
+++ b/index.html
@@ -497,3 +497,5 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
+            </div><!-- End testimonial item -->
+
