--- a/index.html
+++ b/index.html
@@ -512,5 +512,5 @@
               </div>
             </div><!-- End testimonial item -->
 
-            <d
-            
+            <div class="swiper-slide">
+              
