--- a/index.html
+++ b/index.html
@@ -514,4 +514,5 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
+                <img src="assets/img/estimonials-3.jpg" class="testimonial-img" alt="">
                 
