--- a/index.html
+++ b/index.html
@@ -539,3 +539,4 @@
               </div>
             </div><!-- End testimonial item -->
           </div>
+          <div class="swiper-pagination"></div>
