--- a/index.html
+++ b/index.html
@@ -540,3 +540,4 @@
             </div><!-- End testimonial item -->
           </div>
           <div class="swiper-pagination"></div>
+        </div>
