--- a/index.html
+++ b/index.html
@@ -546,3 +546,6 @@
     </section><!-- End Testimonials Section -->
 
     <!-- ======= Contact Section ======= -->
+    <section id="contact" class="contact">
+      <div class="container" data-aos="fade-up">
+
