--- a/index.html
+++ b/index.html
@@ -586,3 +586,4 @@
 
             <form action="#" method="post" role="form" class="php-email-form">
               <div class="row">
+                <div class="col-md-6 form-group">
