--- a/index.html
+++ b/index.html
@@ -595,3 +595,4 @@
               </div>
               <div class="form-group mt-3">
                 <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+              </div>
