--- a/index.html
+++ b/index.html
@@ -601,3 +601,4 @@
               </div>
               <div class="my-3">
                 <div class="loading">Loading</div>
+                <div class="error-message"></div>
