--- a/index.html
+++ b/index.html
@@ -602,3 +602,5 @@
               <div class="my-3">
                 <div class="loading">Loading</div>
                 <div class="error-message"></div>
+                <div class="sent-message">Your message has been sent. Thank you!</div>
+              </div>
