--- a/index.html
+++ b/index.html
@@ -606,3 +606,5 @@
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
+
+          </div>
