--- a/index.html
+++ b/index.html
@@ -616,3 +616,6 @@
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
+  <footer id="footer">
+    <div class="container">
+      <div class="social-links">
