--- a/index.html
+++ b/index.html
@@ -627,3 +627,4 @@
       </div>
       <div class="copyright">
         &copy; <strong><span>Dominique Rwema Bagirishya</span></strong>. All Rights Reserved
+      </div>
