--- a/index.html
+++ b/index.html
@@ -630,3 +630,4 @@
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
+        <!-- You can delete the links only if you purchased the pro version. -->
