--- a/index.html
+++ b/index.html
@@ -345,3 +345,4 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
