--- a/index.html
+++ b/index.html
@@ -174,8 +174,7 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">Mobile Application Development<i class="val">97%</i></span>
-              <div class="progress-bar-wrap">
+              <span class="skill">Mobile Application Development<i class="val">97%</i></span>              <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="98" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
