--- a/index.html
+++ b/index.html
@@ -174,7 +174,9 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">Mobile Application Development<i class="val">97%</i></span>="0" aria-valuemax="100"></div>
+              <span class="skill">Mobile Application Development<i class="val">97%</i></spanq
+                
+                ="0" aria-valuemax="100"></div>
               </div>
             </div>
 
