--- a/index.html
+++ b/index.html
@@ -175,7 +175,9 @@
 
             <div class="progress">
               <span class="skill">Mobile Application Development<i class="val">97%</i></spanq
-                v>
+                
+              </div>
+            </div>
 
             <div class="progress">
               <span class="skill">Dart<i class="val">91%</i></span>
