--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
             <div class="progress">
               <span class="skill">Mobile Application Development<i class="val">97%</i></spanq
-                ="0" aria-valuemax="100"></div>
+                ="0" aria-valuemax="100"></
               </div>
             </div>
 
