--- a/index.html
+++ b/index.html
@@ -174,8 +174,7 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">Mobile Application Development<i class="val">97%</i></spanq
-                ="0" aria-valuemax="100"></div>
+              <span class="skill">Mobile Application Development<i class="val">97%</i></spanq="0" aria-valuemax="100"></div>
               </div>
             </div>
 
