--- a/index.html
+++ b/index.html
@@ -172,7 +172,8 @@
         </div>
         <div class="row skills-content">
           <div class="col-lg-6">
-="0" aria-valuemax="100"></div>
+
+            <div class="progress">="0" aria-valuemax="100"></div>
               </div>
             </div>
 
