--- a/index.html
+++ b/index.html
@@ -182,4 +182,5 @@
             </div>
 
             <div class="progress">
+              <span class="skill">HTML& CSS & JS<i class="val">97%</i></span>
             
