--- a/index.html
+++ b/index.html
@@ -7,4 +7,5 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
+  <!-- Favicons -->
             
