--- a/index.html
+++ b/index.html
@@ -8,4 +8,6 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <!-- Favicons -->
+  <link href="assets/img/favicon.JPG" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
             
