--- a/index.html
+++ b/index.html
@@ -26,4 +26,5 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+</head>
             
