--- a/index.html
+++ b/index.html
@@ -36,4 +36,5 @@
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex flex-column justify-content-center">
 
+    <nav id="navbar" class="navbar nav-menu">
             
