--- a/index.html
+++ b/index.html
@@ -50,4 +50,5 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
+  <section id="hero" class="d-flex flex-column justify-content-center">
             
