--- a/index.html
+++ b/index.html
@@ -68,4 +68,5 @@
 
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
+      <div class="container" data-aos="fade-up">
             
