--- a/index.html
+++ b/index.html
@@ -69,4 +69,6 @@
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
       <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
             
