--- a/index.html
+++ b/index.html
@@ -71,4 +71,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
+          <h2>About</h2>
+          <p>Mr Bagirishya Rwema Dominique is a Software Developer</p>
+        </div>
             
