--- a/index.html
+++ b/index.html
@@ -74,4 +74,7 @@
           <h2>About</h2>
           <p>Mr Bagirishya Rwema Dominique is a Software Developer</p>
         </div>
+
+        <div class="row">
+          <div class="col-lg-4">
             
