--- a/index.html
+++ b/index.html
@@ -78,4 +78,5 @@
         <div class="row">
           <div class="col-lg-4">
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+          </div>
             
