--- a/index.html
+++ b/index.html
@@ -80,4 +80,5 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
+            <h3>Front-end &amp; Back-end Developer.</h3>
             
