--- a/index.html
+++ b/index.html
@@ -93,4 +93,6 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Kigali, Rwanda</span></li>
                 </ul>
               </div>
+              <div class="col-lg-6">
+                <ul>
             
