--- a/index.html
+++ b/index.html
@@ -103,4 +103,5 @@
             <p>
             <b><i>Days: Sunday to Thursday</i>
             <br>
+            <i>Hours: 7AM to 10PM </i>
             
