--- a/index.html
+++ b/index.html
@@ -107,4 +107,6 @@
             <br>
             <i>Friday:7AM to 3PM</i><br>
             <i>Saturday/Sabbath-Closed</i></b>
+            </p>
+          </div>
             
