--- a/index.html
+++ b/index.html
@@ -115,4 +115,5 @@
     </section><!-- End About Section -->
 
     <!-- ======= Facts Section ======= -->
+    <section id="facts" class="facts">
             
