--- a/index.html
+++ b/index.html
@@ -116,4 +116,5 @@
 
     <!-- ======= Facts Section ======= -->
     <section id="facts" class="facts">
+      <div class="container" data-aos="fade-up">
             
