--- a/index.html
+++ b/index.html
@@ -118,4 +118,5 @@
     <section id="facts" class="facts">
       <div class="container" data-aos="fade-up">
 
+        <div class="section-title">
             
