--- a/index.html
+++ b/index.html
@@ -138,4 +138,5 @@
               <i class="bi bi-journal-richtext"></i>
               <span data-purecounter-start="0" data-purecounter-end="97" data-purecounter-duration="1" class="purecounter"></span>
               <p>Completed Projects</p>
+            </div>
             
