--- a/index.html
+++ b/index.html
@@ -145,4 +145,6 @@
             <div class="count-box">
               <i class="bi bx-file"></i>
               <span data-purecounter-start="0" data-purecounter-end="3412" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Support Hours</p>
+            </div>
             
