--- a/index.html
+++ b/index.html
@@ -148,4 +148,6 @@
               <p>Support Hours</p>
             </div>
           </div>
+
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             
