--- a/index.html
+++ b/index.html
@@ -151,4 +151,5 @@
 
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
+              <i class="bi bi-award"></i>
             
