--- a/index.html
+++ b/index.html
@@ -163,4 +163,5 @@
     </section><!-- End Facts Section -->
 
     <!-- ======= Skills Section ======= -->
+    <section id="skills" class="skills section-bg">
             
