--- a/index.html
+++ b/index.html
@@ -164,4 +164,6 @@
 
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
+
+          <div class="col-lg-6">
             
