--- a/index.html
+++ b/index.html
@@ -168,4 +168,6 @@
           <div class="col-lg-6">
 
             <div class="progress">
+              <span class="skill">PHP & MySql <i class="val">98%</i></span>
+              <div class="progress-bar-wrap">
             
