--- a/index.html
+++ b/index.html
@@ -175,4 +175,6 @@
             </div>
 
             <div class="progress">
+              <span class="skill">Web Development with WordPress<i class="val">99.6%</i></span>
+              <div class="progress-bar-wrap">
             
