--- a/index.html
+++ b/index.html
@@ -202,4 +202,5 @@
 
             <div class="resume-item">
               <h4>Bachelors in IT - "Information and Technology"</h4>
+              <h5>2018 - Now</h5>
             
