--- a/index.html
+++ b/index.html
@@ -207,4 +207,5 @@
               <p>College of Science and Technology, <i> Former KIST</i></p>
             </div>
           </div>
+          <div class="col-lg-6">
             
