--- a/index.html
+++ b/index.html
@@ -208,4 +208,5 @@
             </div>
           </div>
           <div class="col-lg-6">
+            <h3 class="resume-title">International Experience</h3>
             
