--- a/index.html
+++ b/index.html
@@ -209,4 +209,5 @@
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">International Experience</h3>
+            <div class="resume-item">
             
