--- a/index.html
+++ b/index.html
@@ -213,4 +213,6 @@
               <h4>Full stack Development</h4>
               <h5>2015 - Present</h5>
               <p><em>Stackoverflow and Github Communities </em></p>
+              <ul>
+                <li>Mobile App Development</li>
             
