--- a/index.html
+++ b/index.html
@@ -216,4 +216,6 @@
               <ul>
                 <li>Mobile App Development</li>
                 <li>Web Development</li>
+                <li>Cyber security</li>
+                <li>Project Contributions</li>
             
