--- a/index.html
+++ b/index.html
@@ -218,4 +218,6 @@
                 <li>Web Development</li>
                 <li>Cyber security</li>
                 <li>Project Contributions</li>
+              </ul>
+            </div>
             
