--- a/index.html
+++ b/index.html
@@ -220,4 +220,5 @@
                 <li>Project Contributions</li>
               </ul>
             </div>
+            <div class="resume-item">
             
