--- a/index.html
+++ b/index.html
@@ -221,4 +221,5 @@
               </ul>
             </div>
             <div class="resume-item">
+              <h4>Graphic Design</h4>
             
