--- a/index.html
+++ b/index.html
@@ -222,4 +222,5 @@
             </div>
             <div class="resume-item">
               <h4>Graphic Design</h4>
+              <h5>2014 - Now</h5>
             
