--- a/index.html
+++ b/index.html
@@ -223,4 +223,5 @@
             <div class="resume-item">
               <h4>Graphic Design</h4>
               <h5>2014 - Now</h5>
+              <p><em>Others</em></p>
             
