--- a/index.html
+++ b/index.html
@@ -225,4 +225,6 @@
               <h5>2014 - Now</h5>
               <p><em>Others</em></p>
               <ul>
+                <li>Video Editing</li>
+                <li>Sound Processing</li>
             
