--- a/index.html
+++ b/index.html
@@ -228,4 +228,6 @@
                 <li>Video Editing</li>
                 <li>Sound Processing</li>
                 <li>Related</li>
+              </ul>
+            </div>
             
