--- a/index.html
+++ b/index.html
@@ -237,4 +237,6 @@
     </section>
 
      <!-- ======= Portfolio Section ======= -->
+     <section id="portfolio" class="portfolio section-bg">
+      <div class="container" data-aos="fade-up">
             
