--- a/index.html
+++ b/index.html
@@ -240,4 +240,6 @@
      <section id="portfolio" class="portfolio section-bg">
       <div class="container" data-aos="fade-up">
 
+
+        <div class="row">
             
