--- a/index.html
+++ b/index.html
@@ -242,4 +242,5 @@
 
 
         <div class="row">
+          <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
             
