--- a/index.html
+++ b/index.html
@@ -246,4 +246,6 @@
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">Here are some of the projects I have worked on.</li>
             </ul>
+          </div>
+        </div>
             
