--- a/index.html
+++ b/index.html
@@ -248,4 +248,5 @@
             </ul>
           </div>
         </div>
+        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
             
