--- a/index.html
+++ b/index.html
@@ -250,4 +250,5 @@
         </div>
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
-       <di            
+       <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                      
