--- a/index.html
+++ b/index.html
@@ -254,4 +254,5 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-details-1.PNG" class="img-fluid" alt="">
               <div class="portfolio-info">
+                <h4>NowPay App</h4>
                       
