--- a/index.html
+++ b/index.html
@@ -195,6 +195,9 @@
       </div>
     </section><!-- End Skills Section -->
 
+    <!-- ======= Resume Section ======= -->
+    <section id="resume" class="resume">
+
             <div class="resume-item pb-0">
               <h4>Achievements</h4>
               <p><em>on July 5th 2019 He received an award from REMA after being 1st Programmer in Rwanda who come up with an idea of App that beats Air Pollution, at kigali Convetion Centre.
