--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
 
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
+      <div class="container" data-aos="fade-up">
 
             <div class="resume-item pb-0">
               <h4>Achievements</h4>
