--- a/index.html
+++ b/index.html
@@ -200,6 +200,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
+          <h2>|Experience|</h2>
+        </div>
 
             <div class="resume-item pb-0">
               <h4>Achievements</h4>
