--- a/index.html
+++ b/index.html
@@ -205,6 +205,8 @@
 
         <div class="row">
           <div class="col-lg-6">
+            <h3 class="resume-title">Professional Experience</h3>
+            <d
             
             <div class="resume-item pb-0">
               <h4>Achievements</h4>
