--- a/index.html
+++ b/index.html
@@ -289,3 +289,5 @@
               </div>
             </div>
           </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
