--- a/index.html
+++ b/index.html
@@ -299,3 +299,7 @@
                 </div>
               </div>
             </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+    
