--- a/index.html
+++ b/index.html
@@ -164,6 +164,9 @@
 
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
+            </div>
+
+          </div>
 
           <div class="col-lg-6">
 
