--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
 
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
+      <div class="container" data-aos="fade-up">
             </div>
 
           </div>
