--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
       <div class="container" data-aos="fade-up">
+              </div>
             </div>
 
           </div>
