--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
+          <h2>Knowledge and Skills</h2>
               <span class="skill">Dart<i class="val">91%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="91" aria-valuemin="0" aria-valuemax="100"></div>
