--- a/index.html
+++ b/index.html
@@ -168,7 +168,9 @@
 
         <div class="section-title">
           <h2>Knowledge and Skills</h2>
-        
+              </div>
+            </div>
+
             <div class="progress">
               <span class="skill">Dart<i class="val">91%</i></span>
               <div class="progress-bar-wrap">
