--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
 
         <div class="section-title">
           <h2>Knowledge and Skills</h2>
+            <div class="progress">="0" aria-valuemax="100"></div>
               </div>
             </div>
 
