--- a/index.html
+++ b/index.html
@@ -168,6 +168,8 @@
 
         <div class="section-title">
           <h2>Knowledge and Skills</h2>
+          <p>Languages and Frameworks</p>
+        </div>
             <div class="progress">="0" aria-valuemax="100"></div>
               </div>
             </div>
