--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@
           <h2>Knowledge and Skills</h2>
           <p>Languages and Frameworks</p>
         </div>
-        <d
+        <div class="row skills-content">
+          <div class="col-lg-6">
             <div class="progress">="0" aria-valuemax="100"></div>
               </div>
             </div>
