--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@
         <div class="row skills-content">
           <div class="col-lg-6">
 
-            <div class="progress">="0" aria-valuemax="100"></div>
+            <div class="progress">
+              <span class="skill">Mobile Application Development<i class="val">97%</i></span>="0" aria-valuemax="100"></div>
               </div>
             </div>
 
