--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
               <span class="skill">Mobile Application Development<i class="val">97%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="97" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress">
               <span class="skill">Flutter<i class="val">98%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="98" aria-valuemin="0" aria-valuemax="100"></div>
