--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="97" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
+            </div>
 
             <div class="progress">
               <span class="skill">Flutter<i class="val">98%</i></span>
