--- a/index.html
+++ b/index.html
@@ -343,3 +343,6 @@
               </div>
             </div>
           </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
