--- a/index.html
+++ b/index.html
@@ -376,3 +376,6 @@
                 <div class="portfolio-links">
                   <a href="portfolio-details4.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
+              </div>
+            </div>
+          </div>
