--- a/index.html
+++ b/index.html
@@ -386,3 +386,4 @@
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Services Section ======= -->
+    <section id="services" class="services">
