--- a/index.html
+++ b/index.html
@@ -387,3 +387,5 @@
 
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
+      <div class="container" data-aos="fade-up">
+
