--- a/index.html
+++ b/index.html
@@ -389,3 +389,4 @@
     <section id="services" class="services">
       <div class="container" data-aos="fade-up">
 
+        <div class="section-title">
