--- a/index.html
+++ b/index.html
@@ -395,3 +395,5 @@
         </div>
 
         <div class="row">
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
