--- a/index.html
+++ b/index.html
@@ -408,4 +408,6 @@
               <p>Apps Development at Good Price</p>
             </div>
           </div>
-z
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
+            <div class="icon-box iconbox-orange ">
