--- a/index.html
+++ b/index.html
@@ -448,4 +448,6 @@
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
-            <d
+            <div class="icon-box iconbox-red">
+              <d
+              
