--- a/index.html
+++ b/index.html
@@ -513,3 +513,6 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
+            </div><!-- End testimonial item -->
+
+            <div class="swiper-slide">
