--- a/index.html
+++ b/index.html
@@ -542,3 +542,4 @@
               </div>
             </div><!-- End testimonial item -->
           </div>
+          <div class="swiper-pagination"></div>
