--- a/index.html
+++ b/index.html
@@ -543,3 +543,4 @@
             </div><!-- End testimonial item -->
           </div>
           <div class="swiper-pagination"></div>
+        </div>
