--- a/index.html
+++ b/index.html
@@ -549,3 +549,4 @@
     </section><!-- End Testimonials Section -->
 
     <!-- ======= Contact Section ======= -->
+    <section id="contact" class="contact">
