--- a/index.html
+++ b/index.html
@@ -563,3 +563,6 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
+                <p>Kigali, Rwanda NYARUGENGE</p>
+              </div>
+
