--- a/index.html
+++ b/index.html
@@ -566,3 +566,5 @@
                 <p>Kigali, Rwanda NYARUGENGE</p>
               </div>
 
+              <div class="email">
+                <i class="bi bi-envelope"></i>
