--- a/index.html
+++ b/index.html
@@ -570,3 +570,6 @@
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
                 <p>rwemadominik3@gmail.com</p>
+              </div>
+
+              <div class="phone">
