--- a/index.html
+++ b/index.html
@@ -594,3 +594,6 @@
                 </div>
               </div>
               <div class="form-group mt-3">
+                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+              </div>
+              <div class="form-group mt-3">
