--- a/index.html
+++ b/index.html
@@ -605,3 +605,6 @@
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
+            </form>
+
+          </div>
