--- a/index.html
+++ b/index.html
@@ -615,3 +615,5 @@
     </section><!-- End Contact Section -->
   </main><!-- End #main -->
 
+  <!-- ======= Footer ======= -->
+  <footer id="footer">
