--- a/index.html
+++ b/index.html
@@ -627,3 +627,5 @@
       </div>
       <div class="copyright">
         &copy; <strong><span>Dominique Rwema Bagirishya</span></strong>. All Rights Reserved
+      </div>
+      <div class="credits">
