--- a/index.html
+++ b/index.html
@@ -629,3 +629,5 @@
         &copy; <strong><span>Dominique Rwema Bagirishya</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
+        <!-- All the links in the footer should remain intact. -->
+        <!-- You can delete the links only if you purchased the pro version. -->
