--- a/index.html
+++ b/index.html
@@ -12,3 +12,5 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
 
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
