--- a/index.html
+++ b/index.html
@@ -26,3 +26,4 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+</head>
