--- a/index.html
+++ b/index.html
@@ -36,3 +36,4 @@
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex flex-column justify-content-center">
 
+    <nav id="navbar" class="navbar nav-menu">
