--- a/index.html
+++ b/index.html
@@ -73,3 +73,4 @@
         <div class="section-title">
           <h2>About</h2>
           <p>Mr Bagirishya Rwema Dominique is a Software Developer</p>
+        </div>
