--- a/index.html
+++ b/index.html
@@ -95,3 +95,4 @@
               </div>
               <div class="col-lg-6">
                 <ul>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bsc in I.T</span></li>
