--- a/index.html
+++ b/index.html
@@ -99,3 +99,5 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
+            </div>
+            <p>
