--- a/index.html
+++ b/index.html
@@ -114,3 +114,5 @@
       </div>
     </section><!-- End About Section -->
 
+    <!-- ======= Facts Section ======= -->
+    <section id="facts" class="facts">
