--- a/index.html
+++ b/index.html
@@ -127,3 +127,4 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
+              <i class="bi bi-emoji-smile"></i>
