--- a/index.html
+++ b/index.html
@@ -132,3 +132,5 @@
               <p>Happy Clients</p>
             </div>
           </div>
+
+          <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
