--- a/index.html
+++ b/index.html
@@ -163,3 +163,4 @@
     </section><!-- End Facts Section -->
 
     <!-- ======= Skills Section ======= -->
+    <section id="skills" class="skills section-bg">
