--- a/index.html
+++ b/index.html
@@ -166,3 +166,4 @@
     <section id="skills" class="skills section-bg">
       <div class="container" data-aos="fade-up">
 
+        <div class="section-title">
