--- a/index.html
+++ b/index.html
@@ -169,3 +169,4 @@
         <div class="section-title">
           <h2>Knowledge and Skills</h2>
           <p>Languages and Frameworks</p>
+        </div>
