--- a/index.html
+++ b/index.html
@@ -171,3 +171,4 @@
           <p>Languages and Frameworks</p>
         </div>
         <div class="row skills-content">
+          <div class="col-lg-6">
