--- a/index.html
+++ b/index.html
@@ -181,3 +181,4 @@
             </div>
 
             <div class="progress">
+              <span class="skill">Flutter<i class="val">98%</i></span>
