--- a/index.html
+++ b/index.html
@@ -182,3 +182,4 @@
 
             <div class="progress">
               <span class="skill">Flutter<i class="val">98%</i></span>
+              <div class="progress-bar-wrap">
