--- a/index.html
+++ b/index.html
@@ -189,3 +189,4 @@
 
             <div class="progress">
               <span class="skill">Dart<i class="val">91%</i></span>
+              <div class="progress-bar-wrap">
