--- a/index.html
+++ b/index.html
@@ -199,3 +199,4 @@
           <div class="col-lg-6">
 
             <div class="progress">
+              <span class="skill">PHP & MySql <i class="val">98%</i></span>
