--- a/index.html
+++ b/index.html
@@ -205,3 +205,5 @@
               </div>
             </div>
 
+            <div class="progress">
+              <span class="skill">Web Development with WordPress<i class="val">99.6%</i></span>
