--- a/index.html
+++ b/index.html
@@ -213,3 +213,4 @@
             </div>
 
             <div class="progress">
+              <span class="skill">HTML& CSS & JS<i class="val">97%</i></span>
