--- a/index.html
+++ b/index.html
@@ -214,3 +214,4 @@
 
             <div class="progress">
               <span class="skill">HTML& CSS & JS<i class="val">97%</i></span>
+              <div class="progress-bar-wrap">
