--- a/index.html
+++ b/index.html
@@ -227,3 +227,4 @@
     </section><!-- End Skills Section -->
 
     <!-- ======= Resume Section ======= -->
+    <section id="resume" class="resume">
