--- a/index.html
+++ b/index.html
@@ -229,3 +229,5 @@
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
       <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
