--- a/index.html
+++ b/index.html
@@ -258,3 +258,5 @@
                 <li>&#169; <i>by Rwanda Environment Management Authority</i> </li>
               </ul>
             </div>
+
+            <div class="resume-item">
