--- a/index.html
+++ b/index.html
@@ -267,3 +267,4 @@
             </div>
           </div>
           <div class="col-lg-6">
+            <h3 class="resume-title">International Experience</h3>
