--- a/index.html
+++ b/index.html
@@ -271,3 +271,4 @@
             <div class="resume-item">
               <h4>Full stack Development</h4>
               <h5>2015 - Present</h5>
+              <p><em>Stackoverflow and Github Communities </em></p>
