--- a/index.html
+++ b/index.html
@@ -296,3 +296,5 @@
     </section>
 
      <!-- ======= Portfolio Section ======= -->
+     <section id="portfolio" class="portfolio section-bg">
+      <div class="container" data-aos="fade-up">
