--- a/index.html
+++ b/index.html
@@ -306,3 +306,4 @@
               <li data-filter="*" class="filter-active">Here are some of the projects I have worked on.</li>
             </ul>
           </div>
+        </div>
