--- a/index.html
+++ b/index.html
@@ -315,4 +315,5 @@
               <div class="portfolio-info">
                 <h4>NowPay App</h4>
                 <div class="portfolio-links">
-z
+                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
