--- a/index.html
+++ b/index.html
@@ -386,3 +386,6 @@
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Services Section ======= -->
+    <section id="services" class="services">
+      <div class="container" data-aos="fade-up">
+
