--- a/index.html
+++ b/index.html
@@ -431,3 +431,4 @@
                 <i class="bx bxl-github"></i>
               </div>
               <h4><a href="">Rwema -Github </a></h4>
+              <p>Repository Contributor-Pro</p>
