--- a/index.html
+++ b/index.html
@@ -432,3 +432,5 @@
               </div>
               <h4><a href="">Rwema -Github </a></h4>
               <p>Repository Contributor-Pro</p>
+            </div>
+          </div>
