--- a/index.html
+++ b/index.html
@@ -434,3 +434,4 @@
               <p>Repository Contributor-Pro</p>
             </div>
           </div>
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
