--- a/index.html
+++ b/index.html
@@ -503,3 +503,4 @@
             </div><!-- End testimonial item -->
 
             <div class="swiper-slide">
+              <div class="testimonial-item">
