--- a/index.html
+++ b/index.html
@@ -505,3 +505,4 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/estimonials-2.jpg" class="testimonial-img" alt="">
+                <h3>Warhol Robert</h3>
