--- a/index.html
+++ b/index.html
@@ -526,3 +526,4 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
+            </div><!-- End testimonial item -->
