--- a/index.html
+++ b/index.html
@@ -529,3 +529,5 @@
             </div><!-- End testimonial item -->
 
 
+            <div class="swiper-slide">
+              <div class="testimonial-item">
