--- a/index.html
+++ b/index.html
@@ -541,3 +541,5 @@
                 </p>
               </div>
             </div><!-- End testimonial item -->
+          </div>
+          <div class="swiper-pagination"></div>
