--- a/index.html
+++ b/index.html
@@ -572,3 +572,5 @@
                 <p>rwemadominik3@gmail.com</p>
               </div>
 
+              <div class="phone">
+                <i class="bi bi-phone"></i>
