--- a/index.html
+++ b/index.html
@@ -479,3 +479,4 @@
     </section><!-- End Services Section -->
 
     <!-- ======= Testimonials Section ======= -->
+    <section id="testimonials" class="testimonials section-bg">
