--- a/index.html
+++ b/index.html
@@ -446,3 +446,5 @@
               <p>Want Web made in WordPress? Contact us</p>
             </div>
           </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
