--- a/index.html
+++ b/index.html
@@ -559,4 +559,5 @@
         <div class="row mt-1">
 
           <div class="col-lg-4">
-            <d
+            <div class="info">
+              
