--- a/index.html
+++ b/index.html
@@ -560,5 +560,5 @@
 
           <div class="col-lg-4">
             <div class="info">
-              <d
-              
+              <div class="address">
+                
