--- a/index.html
+++ b/index.html
@@ -131,3 +131,5 @@
               <span data-purecounter-start="0" data-purecounter-end="44" data-purecounter-duration="1" class="purecounter"></span>
               <p>Happy Clients</p>
             </div>
+          </div>
+
